--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -24,6 +24,8 @@
   <style name="ShareButton" parent="@android:style/Widget.Holo.Button.Borderless.Small">
     <item name="android:layout_width">wrap_content</item>
     <item name="android:layout_height">wrap_content</item>
+    <item name="android:enabled">true</item>
+    <item name="android:textColor">#ff0000</item>
   </style>
 
 </resources>
